# inventory

./: Cargo.toml  README.md  Rocket.toml
src/: main.rs
src/controllers/: inventory.rs
src/dtos/: inventory.rs
src/entities/: inventory_entity.rs  mod.rs
