[package]
name = "inventory"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"]}
serde = {version = "1.0.152", features = ["derive"]}
chrono = {version = "0.4.23", features = ["serde"]}
schemars = {version = "0.8.11", features = ["chrono"]}
serde_json = "1.0.93"
dotenv = "0.15.0"

[workspace]